--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">PLA4</string>
     <string name="title_item_detail">Item Detail</string>
+    <string name="drawer_item_settings">Drawer settings</string>
+    <string name="drawer_item_home">Drawer home</string>
 </resources>
