--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="drawer_share_apps">Share with other Apps</string>
     <string name="drawer_copy_clipboard">Copy to clipboard</string>
     <string name="drawer_send_whatsapp">Send to Whatsapp</string>
+    <string name="send_to">Send TO</string>
 </resources>
