--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="drawer_copy_clipboard">Copy to clipboard</string>
     <string name="drawer_send_whatsapp">Send to Whatsapp</string>
     <string name="send_to">Send TO</string>
+    <string name="file_provider_authority">com.pla1.cifo.ahuesoa.pac1.fileprovider</string>
 </resources>
